added the float configs and the escrow top up strategy
